--- a/css/style.css
+++ b/css/style.css
@@ -512,10 +512,50 @@ body {
 }
 .experts__statistics {
 }
+.experts__block-text {
+  max-width: 400px;
+}
 .statistics-experts {
-  max-width: 654px;
+  max-width: 655px;
   margin: 0px auto;
   position: relative;
+}
+.experts__body {
+  display: flex;
+  align-items: center;
+}
+.experts__content {
+  flex: 0 1 50%;
+  padding: 0px 20px 0px 0px;
+}
+.experts__video {
+  flex: 0 1 50%;
+  padding: 0px 0px 30% 0px;
+  position: relative;
+}
+.experts__video iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+@media (max-width: 767.98px) {
+  .experts__body {
+    align-items: stretch;
+    flex-direction: column;
+  }
+  .experts__video {
+    padding: 0px 0px 58% 0px;
+  }
+  .experts__content {
+    padding: 0;
+    margin: 0px 0px 30px 0px;
+  }
+  .experts {
+    padding: 80px 0px 30px 0px;
+  }
 }
 .statistics-experts__body {
   position: relative;
@@ -523,6 +563,7 @@ body {
   background-color: #fff;
   box-shadow: 0px 2px 24px rgba(88, 126, 236, 0.15);
   border-radius: 16px;
+  margin: 0px 0px 80px 0px;
 }
 .statistics-experts__decor {
   position: absolute;
@@ -568,7 +609,6 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
-  display: flex;
   letter-spacing: 1px;
   color: #ec5863;
   margin-bottom: 5px;
@@ -580,4 +620,21 @@ body {
   letter-spacing: 3px;
   text-transform: uppercase;
   color: #000000;
+}
+
+@media (max-width: 767.98px) {
+  .statistics-experts__body {
+    margin: 0px 0px 50px 0px;
+  }
+  .body-statistics-experts {
+    padding: 25px;
+  }
+}
+@media (max-width: 479.98px) {
+  .body-statistics-experts {
+    flex-direction: column;
+  }
+  .body-statistics-experts__item:not(:last-child) {
+    margin: 0px 0px 15px 0px;
+  }
 }
