--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,9 @@ body {
 
 .block-text {
 }
+.block-text_center {
+  text-align: center;
+}
 .block-text__title {
   font-weight: 700;
   font-size: 44px;
@@ -294,6 +297,10 @@ body {
 }
 .block-text__text {
   line-height: 138.5%;
+}
+.block-text__text_mw {
+  max-width: 620px;
+  margin: 0px auto;
 }
 .block-text__text:not(:last-child) {
   margin: 0px 0px 24px 0px;
@@ -532,6 +539,9 @@ body {
   flex: 0 1 50%;
   padding: 0px 0px 30% 0px;
   position: relative;
+  box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+  border-radius: 8px;
+  overflow: hidden;
 }
 .experts__video iframe {
   position: absolute;
@@ -636,5 +646,142 @@ body {
   }
   .body-statistics-experts__item:not(:last-child) {
     margin: 0px 0px 15px 0px;
+  }
+}
+/* ================================= */
+
+.healthcare {
+  padding: 80px 0px 30px 0px;
+}
+.healthcare__container {
+}
+.healthcare__block-text {
+  margin: 0px 0px 45px 0px;
+}
+/* ================================= */
+.healthcare__items {
+  display: flex;
+  max-width: 980px;
+  /* gap: 72px; */
+}
+.healthcare__column {
+  position: relative;
+  padding: 0px 36px;
+  flex: 0 1 33.333%;
+}
+
+.healthcare__item {
+}
+.item-healthcare {
+  height: 100%;
+  position: relative;
+  z-index: 2;
+  background: #ffffff;
+  box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 35px 17px;
+}
+.item-healthcare__icon {
+  margin: 0px 0px 58px 0px;
+}
+.item-healthcare__title {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 138.5%;
+  color: #000000;
+  margin: 0px 0px 4px 0px;
+}
+.item-healthcare__text {
+  line-height: 138.5%;
+}
+.healthcare__column_1::before,
+.healthcare__column_1::after {
+  position: absolute;
+  content: "";
+  background-color: #ec5863;
+  border-radius: 16px;
+}
+.healthcare__column_1::before {
+  width: 65px;
+  height: 65px;
+  bottom: -35px;
+  left: 15px;
+  transform: rotate(-30deg);
+}
+.healthcare__column_1::after {
+  width: 97px;
+  height: 97px;
+  top: 35px;
+  right: -10px;
+  border-radius: 30px;
+  transform: rotate(30deg);
+}
+
+.healthcare__column_2::after {
+  position: absolute;
+  content: "";
+  background-color: #ec5863;
+  width: 127px;
+  height: 127px;
+  bottom: -35px;
+  right: -35px;
+  border-radius: 30px;
+  transform: rotate(55deg);
+}
+.healthcare__column_3::after {
+  position: absolute;
+  content: "";
+  background-color: #ec5863;
+  width: 65px;
+  height: 65px;
+  top: -25px;
+  right: 10px;
+  border-radius: 30px;
+  transform: rotate(45deg);
+}
+
+@media (max-width: 1087px) {
+  .healthcare__column {
+    padding: 0px 15px;
+  }
+}
+@media (max-width: 991.98px) {
+  .healthcare {
+    padding: 30px 0px 30px 0px;
+  }
+  .healthcare__items {
+    flex-direction: column;
+  }
+  .healthcare__column:not(:last-child) {
+    margin: 0px 0px 25px 0px;
+  }
+}
+
+/* ================================= */
+.footer {
+  padding: 45px 0;
+}
+.footer__container {
+}
+.footer__items {
+  display: flex;
+  column-gap: 50px;
+  row-gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+.footer__item {
+}
+
+@media (max-width: 500px) {
+  .footer {
+    padding: 30px 0;
+  }
+  .footer__items {
+    flex-direction: column;
   }
 }
